# SLAM-Project

./: .gitignore  CMakeLists.txt  README.md  readme
include/: Detect.h  PointCloudProcess.h~
slam/: #license#  readme  readme~
slam/try5/include/: Detect.h  Detect.h~  Kinect_Input.h  Kinect_Input.h~  PointCloud.h~  PointCloudProcess.h  PointCloudProcess.h~
slam/try5/src/: main.cpp
slam/try5/src/cpp/: CMakeLists.txt  CMakeLists.txt~  Detect.cpp~  PointCloudProcess.cpp  PointCloudProcess.cpp~
slam_practice/include/: Kinect_Input.h  Kinect_Input.h~  PointCloudProcess.h
slam_practice/src/: CMakeLists.txt  main.cpp~
slam_practice/src/cpp/: Detect.cpp  Detect.cpp~  Kinect_Input.cpp  PointCloudProcess.cpp
src/cpp/: CMakeLists.txt  CMakeLists.txt~
try5/: CMakeLists.txt~
try5/include/: Mapping.h~
try5/lib/: hello.h~
try5/src/cpp/: Kinect_Input.cpp~  PointCloudProcess.cpp  PointCloudProcess.cpp~
try7/: CMakeLists.txt
try7/include/: PointCloudProcess.h  hello.h~
try7/src/: CMakeLists.txt~  hello.cpp~  main.cpp
try7/src/cpp/: Detect.cpp  Detect.cpp~  Kinect_Input.cpp  PointCloud.cpp~  PointCloudProcess.cpp  PointCloudProcess.cpp~
