set(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")


CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT (SLAMDIY)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(include)
